<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
	<LinearLayout 
	    android:id="@+id/llButtons"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:weightSum="2"
	    android:baselineAligned="false"
	    android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="vertical">
	        <Button 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:id="@+id/btnActivity"
	            android:text="@string/btnAct"/>
	        <Button 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:id="@+id/btnAnotherFragment"
	            android:text="@string/btnAFrag"/>
	        <Button 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:id="@+id/btnCamera"
	            android:text="@string/btnCam"/>
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="vertical">
	        <Button 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:id="@+id/btnFragment"
	            android:text="@string/btnFrag"/>
	    	<Button 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:id="@+id/btnNotificationToast"
	            android:text="@string/btnNotToa"/>
	    	<Button 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:id="@+id/btnVibrate"
	            android:text="@string/btnVib"/>
	    </LinearLayout>
	</LinearLayout>
	
    
   <FrameLayout android:layout_above="@+id/llButtons"
    			android:id="@+id/fragment_container"
   				android:layout_width="match_parent"
   				android:layout_height="match_parent"/>
   
</RelativeLayout>
